# hax

./: .gitignore  LICENSE.md  README.md  hax.cabal  stack.yaml
app/: Main.hs
src/: Drawing.hs  Hax.hs  Lib.hs  Resource.hs  Resources.hs
src/Game/: Geometry.hs  Input.hs  Logic.hs  PureLogic.hs  World.hs
src/Game/Logic/: Bullets.hs  Geometry.hs  Levels.hs  Patterns.hs
src/Resources/: Load.hs  Sprite.hs
test/: Doctests.hs  Tests.hs
