name:           hax
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cronokirby/hax#readme>
homepage:       https://github.com/cronokirby/hax#readme
bug-reports:    https://github.com/cronokirby/hax/issues
author:         Lúcás Meier
maintainer:     cronokirby@gmail.com
copyright:      2018 Lúcás Meier
license:        MIT
license-file:   LICENSE.md
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/hax

library
  exposed-modules:
      Hax
  other-modules:
      Paths_hax
    , Drawing
    , Game.Input
    , Game.PureLogic
    , Game.World
    , Resources.Sprite
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , apecs
    , linear
    , sdl2
  default-language: Haskell2010

executable hax-exe
  main-is: Main.hs
  other-modules:
      Paths_hax
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hax
  default-language: Haskell2010

test-suite hax-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_hax
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hax
  default-language: Haskell2010
