name:           hax
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cronokirby/hax#readme>
homepage:       https://github.com/cronokirby/hax#readme
bug-reports:    https://github.com/cronokirby/hax/issues
author:         Lúcás Meier
maintainer:     cronokirby@gmail.com
copyright:      2018 Lúcás Meier
license:        MIT
license-file:   LICENSE.md
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/hax

library
  exposed-modules:
      Hax
    , Game.Logic
  other-modules:
      Paths_hax
    , Drawing
    , Game.Input
    , Game.Logic.Geometry
    , Game.Logic.Patterns
    , Game.Logic.Levels
    , Game.World
    , Resources
  hs-source-dirs:
      src
  build-depends:
      base      >= 4.7  && < 5
    , apecs     >= 0.5  && < 0.6
    , directory >= 1.3 && < 1.4
    , linear    >= 1.20 && < 2
    , mtl       >= 2.2  && < 2.3
    , sdl2      >= 2.4  && < 2.5
    , sdl2-ttf  >= 2.1  && < 2.2
    , text      >= 1.2  && < 1.3
  default-language: Haskell2010

executable hax-exe
  main-is: Main.hs
  other-modules:
      Paths_hax
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , hax
  default-language: Haskell2010

test-suite hax-test
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  other-modules:
      Paths_hax
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base    >= 4.7  && < 5
    , doctest >= 0.16 && < 0.17
    , hspec   >= 2.5  && < 2.6
    , hax
  default-language: Haskell2010
